# divwork

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  PKGBUILD  README.md  divwork.spec
agenda-correos/: correos.cpp
cmake/: FindLIBVNCCLIENT.cmake
config/: config.h.in
debian/: changelog  control  rules
div-agenda/: correos.cpp
div-verify-ftp/: app.cpp  app.h  frame.cpp  frame.h
div-verify-http/: app.cpp  app.h  frame.cpp  frame.h
div-video/: player.cpp
div-vnc/: app.cpp
divel-calendar/: AddEvent.cpp  AddEvent.h  Calendario.cpp  Calendario.h  DivChat.cpp  DivChat.h  Divel Calendar.cpp  Divel Calendar.h  Resource.h  StdAfx.cpp  StdAfx.h  targetver.h
divel-write/: DivelWriteApp.cpp  DivelWriteApp.h  DivelWriteFrm.cpp  DivelWriteFrm.h
freedesktop/: AUTHORS.txt  agenda-correos.desktop  div-agenda.desktop  div-verify-ftp.desktop  div-verify-http.desktop  div-video.desktop  divel-calendar.desktop  divel-write.desktop  monopoly.desktop
librandom/: CMakeLists.txt  librandom.cpp  librandom.hpp
monopoly/: MonopolyApp.cpp  MonopolyApp.h  MonopolyFrm.cpp  MonopolyFrm.h
